@@ -1,0 +1,7 @@
+class Main {
+
+    public static function main(Void):Void {
+        for (var i = 0; i < 20000000; i++) ;    
+    }
+
+}
